refactor: complete remaining TODOs, clean up comments, and lint codebase